--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "serve-index": "^1.9.1",
     "socket.io": "^4.7.2"
   }
 }
