--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "p2p-demo-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon app"
+    "server": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +15,10 @@
     "nodemon": "^3.0.1",
     "serve-index": "^1.9.1",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/serve-index": "^1.9.4",
+    "typescript": "^5.3.2"
   }
 }
